<resources>
    <!-- App name -->
    <string name="app_name">Currency Calculator</string>

    <string name="amount_to_convert">Amount to convert</string>
    <string name="choose_currency">Choose a currency to convert to</string>
    <string name="dollars">Dollars ($)</string>
    <string name="pounds">Pounds (£)</string>
    <string name="euros">Euros (€)</string>
    <string name="bitcoin">Bitcoin (₿)</string>

    <!-- Text label for toggle switch that asks the user if they want to round up the conversion  -->
    <string name="round_up_conversion">Round up conversion?</string>

    <!-- Label for button that calculates the conversion  -->
    <string name="convert">Convert</string>

    <!-- Formatted string for the tip result  -->
    <string name="amount">Amount: %s</string>
</resources>
